--- a/xuecheng-plus-content/xuecheng-plus-content-service/src/test/resources/bootstrap.yml
+++ b/xuecheng-plus-content/xuecheng-plus-content-service/src/test/resources/bootstrap.yml
@@ -1,13 +1,22 @@
-#微服务配置
 spring:
   application:
-    name: content-service-test
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.101.65:3306/xcplus_content?serverTimezone=UTC&userUnicode=true&useSSL=false&
-    username: root
-    password: mysql
-# 日志文件配置路径
-logging:
-  config: classpath:log4j2-dev.xml
+    name: content-service # 微服务名
+  cloud:
+    nacos:
+      server-addr: 192.168.101.65:8848
+      discovery: # 服务注册
+        namespace: dev
+        group: xuecheng-plus-project
+      config: # 配置中心
+        namespace: dev
+        group: xuecheng-plus-project
+        file-extension: yaml
+        refresh-enabled: true
+        shared-configs:
+          - data-id: logging-${spring.profiles.active}.yaml
+            group: xuecheng-plus-common
+            refresh: true
+  profiles:
+    active: dev # 环境名
+
 
